客户端和管理端同步启动前端操作